3 commit. Do: layout + adapterRV. Single adapter fragment and sample. The top menu shows the status of bluetooth and geolocation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <!--///////////////////////////////////////////////////////////////////////////////-->
-<!--Дублирование ( в Приложении используются следующие теги:-->
+<!--Дублирование в Приложении используются следующее-->
 <!--*title_app* = Названия/Наименования/Заголовки Приложения, навигации, фрагментов  (все что для приложения(основное) и для навигации)-->
 <!--*text_view* текст кнопок,содержание view, button (те что не более 2-3 слов)-->
 <!--*action_message* = Предупреждения/короткие сообщения ( тег = описание сообщения в краткой форме) -->
@@ -56,6 +56,7 @@
     <string name="content_description_scan">Сканирование</string>
     <string name="content_description_connect">Подключение</string>
     <string name="content_description_image_counter">Счетчик электроэнергии</string>
+    <string name="content_description_search_device">Найти устройства поблизости</string>
 
     <!--*service_supporting* = Прочее/Вспомогательное-->
     <string name="on">Включен</string>
